# Embaralhar-palavras

./: Embaralhador de palavras.py  dificuldade.py  embaralhador_de_palavras.py  escolha_tema.py  inicial_page.py  pyproject.toml  tema.py
Palavras/: Comidas.txt  Cores.txt  Frutas.txt
