[tool.poetry]
name = "embaralhar palavras"
version = "0.1.0"
description = ""
authors = ["GustavoDwSantos <gustavos200116@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
